--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner clearfix" style="background-image: linear-gradient(to right top,rgba(128,128,128,0.8),rgba(157,158,158,0.5), rgba(190,190,190,0.2), rgba(222,222,222,0)), url(https://images.unsplash.com/photo-1534073133331-c4b62a557083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+<div class="banner clearfix" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1534073133331-c4b62a557083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
   <% if user_signed_in? %>
     <div class='farmer-nav-home' style='right: -1100px;'>
         <div class='list-container-home'>
@@ -26,7 +26,8 @@
         <%= text_field_tag :query,
           params[:query],
           class: "form-control string required",
-          placeholder: "Find a produce"
+          placeholder: "Find a produce",
+          style: ""
         %>
         <button name="button" type="submit" class="btn btn-flat">
           Search
