--- a/app/assets/stylesheets/components/_create_product_box.scss
+++ b/app/assets/stylesheets/components/_create_product_box.scss
@@ -1,7 +1,7 @@
 .create-product-container {
   width: 560px;
   height: 960px;
-  background: #ffffff;
+  background: #ecd3d3;
   box-shadow: 0 10px 40px rgba(0,0,0,0.2);
 }
 
