--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,15 +3,15 @@
   height:50px;
   text-decoration: none;
   font-size: 24;
-  border: 1px solid #384d48;
-  color: #384d48;
+  border: 1px solid #33903f;
+  color: #33903f;
   border-radius: 8px;
   transition: 0.3s
 }
 
 .btn-f:hover{
   color: white;
-  background-color: #384d48;
+  background-color: #33903f;
   
 }
 
@@ -19,15 +19,15 @@
   width: 150px;
   height:50px;
   color: white;
-  background-color: #384d48;
+  background-color: #33903f;
   font-size: 24;
-  border: 1px solid #384d48;
+  border: 1px solid #33903f;
   border-radius: 5px;
   transition: 0.3s;
 }
 
 .btn-f-d:hover{
-  color: #384d48;
+  color: #33903f;
   border-radius: 5px;
   transition: 0.3s;
   background: white;
