Farmer controller show method

--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -55,7 +55,7 @@
                 <%= text_field_tag :query,
                     params[:query],
                     class: "input-f input-search",
-                    placeholder: "Search for product name or category"
+                    placeholder: "Search by product or category"
                 %>
                 <i class="fas fa-search searchf-f"
                 style="position: absolute;
