--- a/app/assets/stylesheets/farmers/_show.scss
+++ b/app/assets/stylesheets/farmers/_show.scss
@@ -14,15 +14,16 @@
 }
 .icon-position{
     color:black;
-    font-size:50px;
-    margin-bottom: 40px;
+    font-size: 56px;
+    padding-bottom: 40px;
+    margin-left: 30px;
 }
 .row {
     width: 1137px;
 }
 
-.icon-position:hover {
-    color: red;
-    transition: 0.9s;
-    transform: rotateY(180deg);
-}
+// .icon-position:hover {
+//     color: red;
+//     transition: 0.9s;
+//     transform: rotateY(180deg);
+// }
