--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,5 +62,12 @@
 
 <section id="customer" class="customer">
   <h1><strong>Meet Our Farmer</strong></h1>
-  
+  <div class="farmer">
+    <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+    <div class="farmer-details">
+      <h2>Billy Joel</h2>
+      <h4>Barcelona, Spain</h4>
+      <p>I have been a farmer for over 35 years now. I started when I was a little boy assisting my father with his farm. I took over the family business when I was 21. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
+    </div>
+  </div>
 </section>
