--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -128,13 +128,47 @@
 
 .customer {
   background-color: white;
+  padding-bottom: 80px;
+
 }
 
 .customer h1 {
   padding-top: 80px;
+  padding-bottom: 80px;
   text-align: center;
   color: #33903f;
   font-family: 'Poppins', sans-serif;
   font-size: 44px;
 }
 
+.farmer {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  padding: 80px;
+  box-shadow: 0px 4px 24px rgba($color: #000000, $alpha: 0.3);
+}
+
+.farmer img {
+  margin-right: 40px;
+  width: 206px;
+}
+
+.farmer-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.farmer-details p, h2, h4 {
+  text-align: center;
+  margin: 0px;
+}
+.farmer-details h2 {
+  text-align: center;
+  margin: 0px;
+}
+.farmer-details h4 {
+  text-align: center;
+  margin: 0px;
+}
