--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -33,9 +33,9 @@
 <div class="container-f product-show">
     <div class='category'>
         <% if current_user.role == "Farmer" %>
-            <%= link_to new_product_path do %>
+            <%= link_to new_product_path, class:'hvr-icon-buzz-out' do %>
                 <ion-icon name="add-circle-outline"
-                        class="icon-position">
+                        class="icon-position hvr-icon">
                 </ion-icon>
             <% end %>
             <h3>Fruits</h3>
@@ -43,7 +43,7 @@
             <h3>Meat</h3>
             <h3>Dairy</h3>
         <% else%>
-            <h3 style="margin-top: 100px;">Fruits</h3>
+            <h3 style="margin-top: 110px;">Fruits</h3>
             <h3>Veggies</h3>
             <h3>Meat</h3>
             <h3>Dairy</h3>
@@ -71,8 +71,15 @@
                 <div class='product-card'>
                     <div class='card-img' style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
                         <% if current_user.role == "Restaurant" %>
-                            <%= link_to product_order_products_path(product), method: :post, class: "add-b" , style: 'font-size: 30px; color: white;' do %>
+                            <%= link_to product_order_products_path(product), method: :post, class: "add-b hvr-grow hvr-icon-spin" , style: 'font-size: 30px; color: white;' do %>
                                 <ion-icon name="add-circle-outline"></ion-icon>
+                            <% end %>
+                        <% else %>
+                            <%= link_to edit_product_path(product), method: :get, class: "add-b-r hvr-icon-spin" do %>
+                                <ion-icon name="settings" class="hvr-icon"></ion-icon>
+                            <% end %>
+                            <%= link_to product_path(product), method: :delete, class: "add-b hvr-icon-spin", style: 'color: white;' do %>
+                                <ion-icon name="close" class="hvr-icon"></ion-icon>
                             <% end %>
                         <% end %>
                     </div>
@@ -90,7 +97,6 @@
                     </div>
                 </div>
                 </div>
-
             <% end %>
         </div>
     </div>
