--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -11,6 +11,7 @@
     height: 160px;
     object-fit: cover;
     background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://picsum.photos/400/335);
+    cursor: pointer;
 }
 
 .add-b{
