--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -25,7 +25,7 @@
         <% @products.each do |product| %>
                 <div class="col-lg-4">
                 <div class='product-card'>
-                    <div class='card-img' style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.1)), url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
+                    <div class='card-img' data-toggle="modal" data-target="#exampleModalCenter"  style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.1)), url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
                         <% if current_user.role == "Restaurant" %>
                             <%= link_to product_order_products_path(product), method: :post, class: "add-b" , style: 'font-size: 30px; color: white;' do %>
                                 <ion-icon name="add-circle-outline"></ion-icon>
@@ -44,6 +44,52 @@
                     </div>
                 </div>
                 </div>
+
+                <!-- Modal -->
+
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    
+    <div class="modal-content">
+
+        <div class="product-box">
+
+          <div class="background-img" style="background-image: url('<%= cl_image_path product.product_photos.first.data%>')">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <%
+=begin%>
+ <img class=" profile-avatar avatar-m-bordered" alt="avatar-m-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />  
+<%
+=end%>
+          <%= link_to cl_image_tag(product.farmer.user.avatar, class: 'profile-avatar avatar-m-bordered', crop: :fill, height: 105), farmer_path(product.farmer)%>
+          <div class="basic-infos">
+              <div class="title-rating">
+                  <h3><%=product.name %></h3>
+              </div>
+              <div class="price">
+                  <h3>⭐️️️️️️️⭐️⭐️⭐️</h3>
+                  <h3><%=product.rating %></h3>
+    
+                  <h3>€<%=product.price %>/kg</h3>
+              </div>
+          </div>
+          <div class="description">
+              <p><%=product.description %></p>
+          </div>
+          <div class="add-to-cart">
+             <button href="#" class="btn-f btn-m">Add to cart</button>        
+          </div>
+        </div>
+      </div>
+
+
+  </div>
+
+
 
             <% end %>
         </div>
