Style category links in products index and farmer show

--- a/app/assets/stylesheets/farmers/_show.scss
+++ b/app/assets/stylesheets/farmers/_show.scss
@@ -1,28 +1,37 @@
 .product-show {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .category {
-    margin-right: 80px;
+  margin-right: 80px;
 }
 .category:first-child{
-    padding: 60px 0px;
+  padding: 60px 0px;
 }
 .category > h3{
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 .icon-position{
-    color:black;
-    font-size:50px;
-    margin-bottom: 40px;
+  color:black;
+  font-size:50px;
+  margin-bottom: 40px;
 }
 .row {
-    width: 1137px;
+  width: 1137px;
 }
 
 .icon-position:hover {
-    color: red;
-    transition: 0.9s;
-    transform: rotateY(180deg);
+  color: red;
+  transition: 0.9s;
+  transform: rotateY(180deg);
+}
+
+.cat-item {
+  text-decoration: none;
+  color: black;
+  &:hover {
+    text-decoration: none;
+    color: black;
+  }
 }
