--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -26,13 +26,13 @@
                 <h1><%= @farmer.name %></h1>
                 <h2><%= @farmer.address %></h2>
             </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurie</p>
+            <p><%= @farmer.description %></p>
         </div>
     </div>
 </div>
 <div class="container-f product-show">
     <div class='category'>
-        <% if current_user.role == "Farmer" %>
+        <% if current_user.role == "Farmer" && Farmer.find(params[:id]) == current_user.farmer %>
             <%= link_to new_product_path, class:'hvr-icon-buzz-out' do %>
                 <ion-icon name="add-circle-outline"
                         class="icon-position hvr-icon">
@@ -68,20 +68,22 @@
         <div class='cards-container row'>
         <% @products.each do |product| %>
                 <div class="col-lg-4">
+                <%# <% byebug %> 
                 <div class='product-card'>
                     <div class='card-img' style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
-                        <% if current_user.role == "Restaurant" %>
-                            <%= link_to product_order_products_path(product), method: :post, class: "add-b hvr-grow hvr-icon-spin" , style: 'font-size: 30px; color: white;' do %>
-                                <ion-icon name="add-circle-outline"></ion-icon>
-                            <% end %>
-                        <% else %>
-                            <%= link_to edit_product_path(product), method: :get, class: "add-b-r hvr-icon-spin" do %>
-                                <ion-icon name="settings" class="hvr-icon"></ion-icon>
-                            <% end %>
-                            <%= link_to product_path(product), method: :delete, class: "add-b hvr-icon-spin", style: 'color: white;' do %>
-                                <ion-icon name="close" class="hvr-icon"></ion-icon>
-                            <% end %>
+                    <% if current_user.role == "Restaurant" %>
+                        <%= link_to product_order_products_path(product), method: :post, class: "add-b hvr-grow hvr-icon-spin" , style: 'font-size: 30px; color: white;' do %>
+                            <ion-icon name="add-circle-outline"></ion-icon>
                         <% end %>
+                    <% end %>
+                    <% if current_user.role == "Farmer" && Farmer.find(params[:id]) == current_user.farmer %>
+                        <%= link_to edit_product_path(product), method: :get, class: "add-b-r hvr-icon-spin" do %>
+                            <ion-icon name="settings" class="hvr-icon"></ion-icon>
+                        <% end %>
+                        <%= link_to product_path(product), method: :delete, class: "add-b hvr-icon-spin", style: 'color: white;' do %>
+                            <ion-icon name="close" class="hvr-icon"></ion-icon>
+                        <% end %>
+                    <% end %>
                     </div>
                     <div class='card-details'>
                         <div class='rows'>
