--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,14 @@
     width: 1320px;
     margin: 0 auto;
 }
+
+body {
+  margin: 0;
+  font-family: "Open Sans", "Helvetica", "sans-serif";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #0E0000;
+  text-align: left;
+  background-color: #FFFFFF;
+}
