--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,7 +2,7 @@
 .product-card {
     width: 335px;
     box-shadow: 0px 4px 24px rgba($color: #000000, $alpha: 0.3);
-    margin-top: 50px;
+    margin-bottom: 50px;
     position: relative;
 }
 
@@ -16,7 +16,7 @@
 .add-b{
     padding: 4px 16px;
     float: right;
-    font-size: 27px; 
+    font-size: 27px;
     color: white;
     // transform: translateZ(0);
     // box-shadow: 0 0 1px rgba(0, 0, 0, 0);
@@ -24,12 +24,12 @@
     // -moz-osx-font-smoothing: grayscale;
     transition-duration: 0.3s;
     transition-property: transform;
-        
+
 }
 
 .add-b-r{
     padding: 4px 16px;
-    font-size: 27px; 
+    font-size: 27px;
     color: white;
     transition-duration: 0.3s;
     transition-property: transform;
@@ -56,9 +56,9 @@
     height: 78px;
     padding: 4px 10px;
     h4 {
-        margin: 0;    
+        margin: 0;
     }
-    
+
     p {
         margin: 0;
     }
