--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -138,3 +138,43 @@
   font-size: 44px;
 }
 
+
+// **Tablets**
+@media (max-width: 1024px)  {
+  .steps {
+    flex-wrap: wrap;
+  }
+  .step-1 {
+    width: 90%;
+    margin-top: 40px;
+  }
+  .step-1 p {
+    width: 100%;
+    text-align: center;
+  }
+  
+} 
+
+// **Mobile**
+
+@media (max-width: 767px) {
+    .steps {
+      flex-wrap: wrap;
+      padding: 0 40px 60px 40px;
+      
+    }
+    .step-1 {
+      width: 100%;
+      margin-top: 40px;
+      padding: 40px;
+    }
+    .step-1 p {
+      width: 100%;
+      text-align: center;
+    }
+
+    .search-form-control {
+      width: 100%;
+    }
+  }
+
