--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,12 @@
+<style>
+  .row {
+    width: 100%;
+    margin: 0 auto;
+  }
+</style>
 <div class="container">
-  <div class="row justify-content-center ">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-6">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
       <div class="form-login">
 
         <h2>Sign up</h2>
