--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.01)), url(https://images.unsplash.com/photo-1534073133331-c4b62a557083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80); height: 95vh;">
-  <% if user_signed_in? %>
+<% if user_signed_in? %>
   <div class='farmer-nav-home'>
     <div class='list-container-home'>
         <ul>
@@ -18,6 +17,8 @@
     </div>
   </div>
   <% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.01)), url(https://images.unsplash.com/photo-1534073133331-c4b62a557083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80); height: 95vh;">
+  
   <div class="container">
       <h1>The Farmers' <strong>eMarket</strong></h1>
       <p>Order local and fresh ingredients for your restaurant</p>
@@ -44,7 +45,7 @@
   <div class="steps">
     <div class="step-1">
       <i class="fas fa-search"></i>
-      <h3>Seach</h3>
+      <h3>Search</h3>
       <p>Search local and fresh food by product category or farmer</p>
     </div>
     <div class="step-1">
