--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,34 +1,35 @@
-
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  Add Product
+    Add Product
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
 
-    <div class="create-product-container">
-            <%= simple_form_for(@product) do |f| %>
-                <div class="background-img" style="background-image: url(https://images.unsplash.com/photo-1482012792084-a0c3725f289f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
+
+            <div class="create-product-container">
+                <%= simple_form_for(@product) do |f| %>
+                <div class="background-img"
+                    style="background-image: url(https://images.unsplash.com/photo-1482012792084-a0c3725f289f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                     </button>
-                    <label class="custom-file-upload" >
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <label class="custom-file-upload">
                         <%= f.fields_for :product_photos do |p| %>
                         <%= p.file_field :data, :multiple => true, name: "product_photos[data][]" %>
                         <% end %>
                     </label>
                 </div>
-            
+
                 <div class="product-info">
                     <div class="name-tag-inputs">
                         <%= f.input :name, label: "Name", id:"product-name" %>
                         <%= f.input :category, label: "Category", as: :select, collection: ['Fruits', 'Vegetables', 'Meat', 'Dairy' ], id:"product-category" %>
                     </div>
-            
+
                     <%= f.input :description, id:"product-description" %>
                     <div class="price-kg">
                         <%= f.input :price, label: "Price", id:"product-price" %>
@@ -43,11 +44,10 @@
                         <%= f.button :submit, class: "btn-f btn-m", label:"Add Product" %>
                     </div>
                 </div>
-            <% end %>
+                <% end %>
+            </div>
         </div>
     </div>
-</div>
 
 
-  </div>
 </div>
