--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,34 +40,81 @@
 
 
 <section id="how-to" class="how-to">
-  <h1><strong>How it works</strong></h1>
-  <div class="steps">
-    <div class="step-1">
-      <i class="fas fa-search"></i>
-      <h3>Seach</h3>
-      <p>Search local and fresh food by product category or farmer</p>
+    <h1><strong>How it works</strong></h1>
+    <div class="steps">
+      <div class="step-1">
+        <i class="fas fa-search"></i>
+        <h3>Search</h3>
+        <p>Search local and fresh food by product category or farmer</p>
+      </div>
+      <div class="step-1">
+        <i class="far fa-hand-pointer"></i>
+        <h3>Choose</h3>
+        <p>Choose flexible quantities according to your changing needs</p>
+      </div>
+      <div class="step-1">
+        <i class="fas fa-truck"></i>
+        <h3>Delivery</h3>
+        <p>Get your products delivered directly to your restaurant</p>
+      </div>
     </div>
-    <div class="step-1">
-      <i class="far fa-hand-pointer"></i>
-      <h3>Choose</h3>
-      <p>Choose flexible quantities according to your changing needs</p>
-    </div>
-    <div class="step-1">
-      <i class="fas fa-truck"></i>
-      <h3>Delivery</h3>
-      <p>Get your products delivered directly to your restaurant</p>
-    </div>
-  </div>
 </section>
 
 <section id="customer" class="customer">
-  <h1><strong>Meet Our Farmer</strong></h1>
-  <div class="farmer">
-    <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
-    <div class="farmer-details">
-      <h2>Billy Joel</h2>
-      <h4>Barcelona, Spain</h4>
-      <p>I have been a farmer for over 35 years now. I started when I was a little boy assisting my father with his farm. I took over the family business when I was 21. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
+  <h1><strong>Meet Our Farmers</strong></h1>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item ">
+        <div class="farmer">
+          <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+          <div class="farmer-details">
+            <h2>Billy Joel</h2>
+            <h4>Barcelona, Spain</h4>
+            <p>I have been a farmer for over 35 years now. I started when I was a little boy assisting my father with his farm. I took over the family business when I was 21. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item active">
+        <div class="farmer">
+          <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+          <div class="farmer-details">
+            <h2>Billy Joel</h2>
+            <h4>Barcelona, Spain</h4>
+            <p>I have been a farmer for over 35 years now. I started when I was a little boy assisting my father with his farm. I took over the family business when I was 21. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="farmer">
+          <img class="avatar-l" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+          <div class="farmer-details">
+            <h2>Billy Joel</h2>
+            <h4>Barcelona, Spain</h4>
+            <p>I have been a farmer for over 35 years now. I started when I was a little boy assisting my father with his farm. I took over the family business when I was 21. I grow all types of fruits, ranging from apples, oranges, mangoes, to vegetables such as lettuce, zucchini, carrots. I have no doubt that you will enjoy my produce.</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </section>
+
+
+
+<section id="footer-f" class="footer-f">
+  <div class="social-media">
+    <ul>
+      <li><i class="fab fa-facebook-f"></i></li>
+      <li><i class="fab fa-twitter"></i></li>
+      <li><i class="fab fa-instagram"></i></li>
+    </ul>
+  </div>
+</section>
+
