--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -81,7 +81,7 @@
 // How to Section
 
 .how-to {
-  // background-color: rgba(245, 245, 245, 0.1);
+  background-color: rgb(255, 255, 255);
   width: 100%;
 }
 
@@ -127,14 +127,12 @@
 // Meet our customer
 
 .customer {
-  background-color: white;
   padding-bottom: 80px;
 
 }
 
 .customer h1 {
   padding-top: 80px;
-  padding-bottom: 80px;
   text-align: center;
   color: #33903f;
   font-family: 'Poppins', sans-serif;
@@ -142,11 +140,13 @@
 }
 
 .farmer {
+  background-color: white;
   width: 1200px;
-  margin: 0 auto;
+  margin: 80px auto;
   display: flex;
   padding: 80px;
   box-shadow: 0px 4px 24px rgba($color: #000000, $alpha: 0.3);
+
 }
 
 .farmer img {
@@ -171,4 +171,19 @@
 .farmer-details h4 {
   text-align: center;
   margin: 0px;
+}
+// footer section
+.footer-f {
+  height: 200px;
+  background-color: #000000;
+}
+
+.social-media{
+  color:white;
+}
+
+.social-media ul{
+  list-style-type: none;
+  display: flex;
+  
 }
