fixed not showing layouts correctly

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
     <%= yield %>
 
-    <p class="notice"><%= notice %></p>
+    <p class="notice" style="margin:0px;"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
