--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container-f product-show">
     <div class='category', style="margin-top: 160px">
-        <h3><%= link_to "Fruits", products_path(category: "Fruits"), class: 'cat-item' %></h3>
-        <h3><%= link_to "Veggies", products_path(category: "Vegetables"), class: 'cat-item' %></h3>
-        <h3><%= link_to "Meat", products_path(category: "Meat"), class: 'cat-item' %></h3>
-        <h3><%= link_to "Dairy", products_path(category: "Dairy"), class: 'cat-item' %></h3>
+        <h3><%= link_to "Fruits", products_path(query: {category: "Fruits"}), class: 'cat-item' %></h3>
+        <h3><%= link_to "Veggies", products_path(query: {category: "Vegetables"}), class: 'cat-item' %></h3>
+        <h3><%= link_to "Meat", products_path(query: {category: "Meat"}), class: 'cat-item' %></h3>
+        <h3><%= link_to "Dairy", products_path(query: {category: "Dairy"}), class: 'cat-item' %></h3>
     </div>
     <div>
         <div class="form-group-f">
             <%= form_tag products_path, method: :get, class:'form-group-f' do %>
-                <%= text_field_tag :query,
-                    params[:query],
+                <%= text_field_tag 'query[text]',
+                    params[:query].try(:[], :text),
                     class: "input-f input-search",
                     placeholder: "Search for product name or category"
                 %>
