add responsiveness to landing page and index page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -59,7 +59,7 @@
   }
 
 // **Mobile**
-@media only (max-width: 767px) {
+@media (max-width: 767px) {
     .farmer-nav-home {
       float: left;
       position: relative;
