--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -27,3 +27,33 @@
     font-size: 30px; 
     color: white;
 }
+
+.container-f {
+    width: 1320px;
+    margin: 0 auto;
+}
+
+@media (max-width: 4000px) {
+    .responsive-dropdown {
+        display: none;
+    }
+}
+
+@media (max-width: 1200px) {
+    .responsive-dropdown {
+        display: contents;
+    }
+
+    .category {
+        display: none;
+    }
+
+    .input-search {
+        width: 100vw;
+    }
+
+    .container-f {
+        width: 100%;
+    }
+
+}
