--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,15 +13,28 @@
                     class: "input-f input-search",
                     placeholder: "Search for product name or category"
                 %>
-                <i class="fas fa-search searchf-f"
-                style="position: absolute;
-                        top: 63px;
-                        left: 1040px;
-                        font-size: 40px;">
-                </i>
+                
             <% end %>
         </div>
-        <div class='cards-container row'>
+
+        <div class='responsive-dropdown' style='width: 100%'>
+            <select style='width: 49.5%'>
+                <option>Filter by product type</option>
+                <option>Fruits</option>
+                <option>Veggies</option>
+                <option>Meat</option>
+                <option>Dairy</option>
+            </select>
+            <select style='width: 49.5%; float:right'>
+                <option>Filter by product type</option>
+                <option>Fruits</option>
+                <option>Veggies</option>
+                <option>Meat</option>
+                <option>Dairy</option>
+            </select>
+        </div>
+
+        <div class='cards-container'>
         <% @products.each do |product| %>
                 <div class="col-lg-4">
                 <div class='product-card'>
