--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,16 +27,16 @@
       </li>
       <% if current_user.role == "Restaurant" %>
         <li class="nav-item"> <%= link_to "My Orders", restaurant_orders_path, class: "nav-link", style: 'padding: 15px 20px'%></li>           
-        <li class="nav-item"> <%= link_to "", restaurant_cart_path, class: "nav-link fas fa-shopping-cart", style: 'padding: 15px 20px; font-size: 25px; margin-right: 25px'%></li>
+        <li class="nav-item"> <%= link_to "", restaurant_cart_path, class: "nav-link fas fa-shopping-cart", style: 'padding: 15px 20px; font-size: 25px; margin-right: 10px'%></li>
     <% end %>
     <% if current_user.role == "Farmer" %>
         <li class="nav-item"> <%= link_to "My profile", farmers_path(@farmer), class: "nav-link", style: 'padding: 15px 20px'%></li>           
         <li class="nav-item"> <%= link_to "Add a product", new_product_path, class: "nav-link", style: 'padding: 15px 20px'%></li>
     <% end %>
       <li class="nav-item dropdown">
-        <%= cl_image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, height: 50  %>
+        <%= cl_image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, height: 50 %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Logout", destroy_user_session_path, class: "dropdown-item"%>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item"%>
         </div>
       </li>
     </ul>
