Category filter independent from text search

--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -32,7 +32,7 @@
 .cat-item {
   text-decoration: none;
   color: black;
-  margin-bottom: 160px;
+  padding: 10px;
   &:hover {
     text-decoration: none;
     color: black;
