--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -38,16 +38,13 @@
                         class="icon-position hvr-icon">
                 </ion-icon>
             <% end %>
-            <h3 style="margin-top: 56px"><%= link_to "Fruits", farmer_path(@farmer, query: {category: "Fruits"}), class: 'cat-item' %></h3>
-            <h3><%= link_to "Veggies", farmer_path(@farmer, query: {category: "Vegetables"}), class: 'cat-item' %></h3>
-            <h3><%= link_to "Meat", farmer_path(@farmer, query: {category: "Meat"}), class: 'cat-item' %></h3>
-            <h3><%= link_to "Dairy", farmer_path(@farmer, query: {category: "Dairy"}), class: 'cat-item' %></h3>
-        <% else%>
-            <h3 style="margin-top: 160px"><%= link_to "Fruits", farmer_path(@farmer, query: {category: "Fruits"}), class: 'cat-item' %></h3>
-            <h3><%= link_to "Veggies", farmer_path(@farmer, query: {category: "Vegetables"}), class: 'cat-item' %></h3>
-            <h3><%= link_to "Meat", farmer_path(@farmer, query: {category: "Meat"}), class: 'cat-item' %></h3>
-            <h3><%= link_to "Dairy", farmer_path(@farmer, query: {category: "Dairy"}), class: 'cat-item' %></h3>
+            <h3 style="margin-top: 56px"><%= link_to "Fruits", farmer_path(@farmer, query: query_hash(@query, :category, "Fruits")), class: 'cat-item' %></h3>
+        <% else %>
+            <h3 style="margin-top: 160px"><%= link_to "Fruits", farmer_path(@farmer, query: query_hash(@query, :category, "Fruits")), class: 'cat-item' %></h3>
         <% end %>
+        <h3><%= link_to "Veggies", farmer_path(@farmer, query: query_hash(@query, :category, "Vegetables")), class: 'cat-item' %></h3>
+        <h3><%= link_to "Meat", farmer_path(@farmer, query: query_hash(@query, :category, "Meat")), class: 'cat-item' %></h3>
+        <h3><%= link_to "Dairy", farmer_path(@farmer, query: query_hash(@query, :category, "Dairy")), class: 'cat-item' %></h3>
     </div>
     <div>
         <div class="form-group-f">
