Add style for active category

--- a/app/assets/stylesheets/config/_utilities.scss
+++ b/app/assets/stylesheets/config/_utilities.scss
@@ -1,3 +1,7 @@
-.black-underline {
-  border-bottom: 1px black solid;
+.green-underline {
+  border-bottom: 3px #384D48 solid;
+}
+
+.bold {
+  font-weight: bold;
 }
